cli/tests/test/doc.ts
/**
 * ```
 * import { example } from "./doc.ts";
 *
 * console.assert(example() == 42);
 * ```
 */
export function example(): string {
  return "example";
}
